# python

./: README.md
bestandslistenabgleich/: .gitignore  GNUmakefile  Pipfile  README.md  TODO.md  bestandslistenabgleich.py  install-python-prerequisites.cmd  install-python-prerequisites.sh  pyproject.toml  requirements.txt
bestandslistenabgleich/data/: SHA256SUMS
sbasuche/: .gitignore  GNUmakefile  README.md  output.json  pyproject.toml  sbasuche.py
