[project]
name = "bestandslistenabgleich"
version = "0.1.4"
description = "Kleines Tool um die SBA-Bestandsliste mit unserer eigenen Liste und der DNB abzugleichen"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "isbnlib>=3.10",
    "RapidFuzz>=3.13",
]

[tool.ruff]
line-length = 160
indent-width = 4
target-version = 'py312'
