[project]
name = "sbasuche"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "scrapy>=2.12.0",
]

[tool.ruff]
line-length = 160
indent-width = 4
target-version = 'py312'

# [tool.coverage.run]
# branch = true
# source = ["."]
# omit = []
