[project]
name = "sbasuche"
version = "0.2.3"
description = "Bestandskatalog auslesen von der SBA via deren Katalogsuchfunktion"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13",
    "requests>=2.32",
    "isbnlib>=3.10",
]

[tool.ruff]
line-length = 160
indent-width = 4
target-version = 'py312'

# [tool.coverage.run]
# branch = true
# source = ["."]
# omit = []
